[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-gugu-utools"
version = "1.0.0"
description = "Industrial-grade batch media processing nodes for ComfyUI with advanced video support"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "gugu", email = "gugu@example.com" }
]
keywords = ["comfyui", "batch-processing", "video", "image", "media"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.9"

# Keep default install non-invasive in shared ComfyUI environments.
# Core runtime packages (torch/numpy/Pillow) come from the host ComfyUI Python env.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
video-extra = [
    "av>=10.0.0,<15.0",
    "ffmpeg-python>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mogu-comfy-batch-process"
Repository = "https://github.com/yourusername/mogu-comfy-batch-process"
Documentation = "https://github.com/yourusername/mogu-comfy-batch-process#readme"
Issues = "https://github.com/yourusername/mogu-comfy-batch-process/issues"

[tool.comfy]
PublisherId = "gugu"
DisplayName = "gugu-uTools (Batch Media Processing)"
Icon = ""

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
)/
'''
